@@ -1,3 +1,8 @@
+2007-04-25  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/search.py (DateSearchFilter.select): Add and reorganize
+	internals a bit to be able to select by option_type.
+
 2007-04-25  Ali Afshar <aafshar@gmail.com>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
